src/App.css
@import url('https://fonts.googleapis.com/css2?family=Jost:wght@100;300;500;700&display=swap');

/* 
================
Variables
================
*/

:root {
	/* Dark theme */
	--dark-primary: #141625;
	--dark-secondary: #5a556c;
	--dark-element: #1f213a;
	--dark-text-primary: #feffff;
	--dark-text-secondary: #9496af;
	--dark-box-shadow: 2px 0px 5px var(--dark-secondary);
	--dark-paid-text: #58a799;
	--dark-paid-bg: #1e2d3a;
	--dark-pending-text: #e89127;
	--dark-pending-bg: #30232a;
	--dark-overdue-text: #ee5555;
	--dark-overdue-bg: #442525;
	--dark-draft-text: #d1d3ea;
	--dark-draft-bg: rgba(49, 50, 67, 0.875);

	/* Light theme */
	--light-primary: #f3f1f9;
	--light-secondary: #cac3e6;
	--light-element: #ffffff;
	--light-text-primary: #3a3a3a;
	--dark-text-secondary: #c8c7cb;
	--light-box-shadow: 2px 0px 5px var(--light-secondary);
	--light-paid-text: #57aa8e;
	--light-paid-bg: #e6fff8;
	--light-pending-text: #dda658;
	--light-pending-bg: #fff4f0;
	--light-overdue-text: #da6d6d;
	--light-overdue-bg: #fbeeee;
	--light-draft-text: #9772e1;
	--light-draft-bg: rgba(242, 237, 255, 0.95);

	/* Main */
	--highlight: #8362fe;
	--highlight-2: #7c5df9;
	--icons: #8282a5;
	--delete: #f25c5c;
	--font: 'Jost', sans-serif;
	--paid-text: var(--dark-paid-text);
	--paid-bg: var(--dark-paid-bg);
	--pending-text: var(--dark-pending-text);
	--pending-bg: var(--dark-pending-bg);
	--overdue-text: var(--dark-overdue-text);
	--overdue-bg: var(--dark-overdue-bg);
	--draft-text: var(--dark-draft-text);
	--draft-bg: var(--dark-draft-bg);
	/* --paid-text: #58a799;
	--paid-bg: #1e2d3a;
	--pending-text: #e89127;
	--pending-bg: #30232a;
	--overdue-text: #ee5555;
	--overdue-bg: #771b1b8a;
	--draft-text: #d1d3ea;
	--draft-bg: #2a2c43; */
	/* Elements */
	--transition: all 0.3s linear;
	--max-width: 1170px;
	--radius-1: 0.25rem;
	--radius-2: 0.5rem;
	--primary: var(--dark-primary);
	--secondary: var(--dark-secondary);
	--element: var(--dark-element);
	--text-primary: var(--dark-text-primary);
	--text-secondary: var(--text-secondary);
	--box-shadow: var(--dark-box-shadow);
}

*,
::before,
::after {
	box-sizing: border-box;
	padding: 0;
	margin: 0;
}

/* 
================================================================================
   ____   _           _               _ 
  / ___| | |   ___   | |__     __ _  | |
 | |  _  | |  / _ \  | '_ \   / _` | | |
 | |_| | | | | (_) | | |_) | | (_| | | |
  \____| |_|  \___/  |_.__/   \__,_| |_|

================================================================================
*/

body {
	background-color: var(--primary);
	color: var(--text-primary);
	font-family: var(--font);
	transition: var(--transition);
}

main {
	width: 100%;
	height: 100%;
	/* display: flex; */
	/* align-items: center; */
	/* justify-content: center; */
}

.section-center {
	/* height: 100vh; */
	/* width: 100vw; */
	/* min-height: 100; */
	height: 100%;
	width: 100%;
	display: flex;
	align-items: center;
	justify-content: center;
	transition: var(--transition);
	/*  */
	/* overflow: hidden; */
}

img {
	/* max-height: 50px; */
	height: 100%;
}

input {
	padding: 0.75rem;
	border-radius: var(--radius-2);
	border: none;
	background-color: var(--element);
	color: var(--text-primary);
	font-family: var(--font);
	font-size: 1rem;
	border: 1px solid var(--text-primary);
}

h1 {
	font-size: 1.125rem;
}

h2 {
	font-size: 0.875rem;
	font-weight: 300;
}

h3 {
	font-size: 0.875rem;
}

h4 {
	font-size: 0.875rem;
	font-weight: 400;
}

@media screen and (min-width: 568px) {
	h1 {
		font-size: 1.25rem;
	}

	h2 {
		font-size: 1rem;
		font-weight: 300;
	}

	h4 {
		font-size: 1rem;
		font-weight: 400;
	}
}

input:-webkit-autofill,
input:-webkit-autofill:hover,
input:-webkit-autofill:focus,
input:-webkit-autofill:active {
	box-shadow: 0 0 0 30px var(--element) inset;
	-webkit-box-shadow: 0 0 0 30px var(--element) inset !important;
	border: 1px solid var(--text-primary);
	box-sizing: border-box;
}

input:focus {
	outline: 2px solid var(--highlight);
}

input:-webkit-autofill {
	-webkit-text-fill-color: var(--text-primary) !important;
}

a {
	color: var(--highlight);
}

/* 
================================================================================
     _              _     _     
    / \     _   _  | |_  | |__  
   / _ \   | | | | | __| | '_ \ 
  / ___ \  | |_| | | |_  | | | |
 /_/   \_\  \__,_|  \__| |_| |_|

================================================================================
*/

.field-container {
	height: 100vh;
	width: 100vw;
	display: flex;
	align-items: center;
	padding: 1rem;
	justify-content: center;
	/* overflow: hidden; */
}

.field {
	width: 350px;
	height: auto;
	border-radius: var(--radius-2);
	/* background-color: var(--primary); */
	background-color: var(--draft-bg);
	padding: 1.5rem;
	box-shadow: 0px 2px 5px rgba(152, 152, 152, 0.344);
	border: 1px solid var(--text-primary);
}

.paper-plane {
	/* height: 60%; */
	width: 85%;
	height: auto;
	/* max-width: 1750px; */
	position: absolute;
	z-index: -2;
	/* display: none; */
	align-self: flex-start;
}

.form {
	height: 100%;
	width: 100%;
	display: flex;
	flex-direction: column;
	justify-content: space-between;
	align-items: space-between;
	text-align: center;
}

.auth-title {
	font-size: 2rem;
	font-weight: 300;
}

.btn {
	background-color: var(--highlight);
	border: none;
	padding: 0.675rem 0;
	border-radius: var(--radius-2);
	font-size: 1rem;
}

.error {
	color: var(--delete);
}

.success {
	color: var(--paid-text);
}
/* ... */

